--- a/k8/app_db/service_db.yml
+++ b/k8/app_db/service_db.yml
@@ -1,13 +1,38 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mongo-pv
+  labels:
+    type: local
+  finalizers:
+    - kubernetes.io/pv-protection
+spec:
+  storageClassName: mongo-pv
+  capacity:
+    storage: 500Mi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: /tmp/data
+    type: ""
+
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
 spec:
+  # selector: 
+  # volumeName: mongo-pv
+  storageClassName: mongo-pv
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 256Mi
+
 ---
 apiVersion: v1
 kind: Service
@@ -19,6 +44,7 @@ spec:
   ports:
     - port: 27017
       targetPort: 27017
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -28,6 +54,7 @@ spec:
   selector:
     matchLabels:
       app: mongo
+  # replicas: 3
   template:
     metadata:
       labels:
@@ -41,6 +68,13 @@ spec:
           volumeMounts:
             - name: storage
               mountPath: /data/db
+          resources:
+            limits:
+              memory: 1Gi
+              cpu: "1"
+            requests:
+              memory: 256Mi
+              cpu: "0.2"
       volumes:
         - name: storage
           persistentVolumeClaim:
